# stats_arrays

./: .cruft.json  .hgignore  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: python-package-deploy.yml
docs/: Makefile  conf.py  index.rst  lhc.rst  make.bat  mcrng.rst  rng.rst
docs/distributions/: base.rst  bernoulli.rst  beta.rst  beta_pert.rst  discrete-uniform.rst  extreme.rst  gamma.rst  lognormal.rst  normal.rst  student.rst  triangular.rst  uniform.rst  weibull.rst
src/stats_arrays/: __init__.py  dataset_statistics.py  errors.py  random.py  uncertainty_choices.py  utils.py
src/stats_arrays/distributions/: __init__.py  base.py  bernoulli.py  beta.py  beta_pert.py  discrete_uniform.py  extreme.py  gamma.py  geometric.py  lognormal.py  normal.py  student.py  undefined.py  weibull.py
stats_arrays/: __init__.py  dataset_statistics.py  errors.py  fitting.py  random.py  uncertainty_choices.py  utils.py
stats_arrays/distributions/: __init__.py  base.py  bernoulli.py  beta.py  discrete_uniform.py  extreme.py  gamma.py  geometric.py  lognormal.py  normal.py  student.py  undefined.py  weibull.py
stats_arrays/tests/: __init__.py  base.py  choices.py  conversions.py  lhc.py  rng.py  uncertainty.py
stats_arrays/tests/distributions/: __init__.py  bernoulli.py  beta.py  discrete_uniform.py  extreme.py  gamma.py  lognormal.py  normal.py  student.py  triangular.py  uniform.py  weibull.py
tests/: base.py  choices.py  conftest.py  conversions.py  lhc.py  mc.py  rng.py  test_base.py  test_choices.py  test_conversions.py  test_lhc.py  test_mc.py  test_rng.py
tests/distributions/: bernoulli.py  beta.py  discrete_uniform.py  extreme.py  gamma.py  lognormal.py  normal.py  student.py  test_bernoulli.py  test_beta.py  test_beta_pert.py  test_discrete_uniform.py  test_extreme.py  test_gamma.py  test_lognormal.py  test_normal.py  test_student.py  test_triangular.py  test_uniform.py  test_weibull.py  triangular.py  uniform.py  weibull.py
